fix header alignment issue

--- a/assets/css/pages/member-logIn.css
+++ b/assets/css/pages/member-logIn.css
@@ -52,7 +52,7 @@ input[type="password"] {
   text-decoration: underline;
 }
 
-.btn {
+button.login {
   background-color: #c5ad57;
   color: white;
   margin-top: 45px;
